# Netra-NMT

./: .gitignore  08_test_tokenizer.py  LICENSE  README.md  distill_log.jsonl  eval_results_alt.json  eval_results_rinabuoy.json  pyproject.toml  requirements.txt  train_log.jsonl  train_log_finetune.jsonl  train_log_human_finetune.jsonl
netra_nmt/: __init__.py  cli.py  config.py  decoding.py  model.py  server.py  translator.py  webapp.py  weights.py
netra_nmt/assets/: spm_32k.model
netra_nmt/static/: index.html
results/: eval_epoch03.json  eval_results_alt.json  eval_results_lyfeyvutha_350M_alt.json  eval_results_madlad3b_alt.json  eval_results_nllb1.3B_alt.json  eval_results_nllb200_alt.json  eval_results_rinabuoy.json  google_translate_alt.json  train_log.jsonl
scripts/: 02_extract_paracrawl.py  02_extract_seyha.py  03_deduplicate.py  05_audit.py  06_build_tokenizer_corpus.py  07_train_tokenizer.py  09_train_student.py  10_distill.py  benchmark_metrics.ipynb  evaluate_alt.py  export_checkpoint.py  inference.py  merge_ds.py  model_mini_nllb.py  translate.py
scripts/training/: 01_extract_nllb.py  01_extract_raw.py  02b_clean_new_sources.py  04_quick_filter.py  08_build_bilingual_dataset.py  09_train_student.py  10_distill.py  11_build_finetune_dataset.py  evaluate_alt.py  inference.py  translate.py
scripts/training/teacher/: 01_load_teacher.py  03_filter_distillation.py
teacher/: 02_generate_teacher_output.py
tokenizer/: spm_32k.model  spm_32k.vocab  spm_48k.model  spm_48k.vocab
