[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netra-nmt"
version = "0.1.0"
description = "A compact, from-scratch English↔Khmer neural machine translation model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Darayut Nhem", email = "darayutnhem009@gmail.com" }]
keywords = ["translation", "khmer", "english", "nmt", "transformer", "seq2seq"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "sentencepiece>=0.1.99",
    "safetensors>=0.4.0",
    "huggingface_hub>=0.20.0",
    "numpy",
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
train = [
    "datasets",
    "pandas",
    "pyarrow",
    "sacrebleu>=2.3.1",
    "bert-score>=0.3.13",
    "unbabel-comet>=2.2.0",
    "khmercut",
    "accelerate",
    "langdetect",
    "fasttext-wheel",
]

[project.scripts]
netra-translate = "netra_nmt.cli:main"
netra-web = "netra_nmt.server:main"

[project.urls]
Homepage = "https://github.com/NDarayut/netra-nmt"

[tool.hatch.build.targets.wheel]
packages = ["netra_nmt"]

[tool.hatch.build.targets.wheel.force-include]
"netra_nmt/assets/spm_32k.model" = "netra_nmt/assets/spm_32k.model"
"netra_nmt/static/index.html" = "netra_nmt/static/index.html"
